[project]
version = "0.1.0"
dependencies = [
    "pandas",
    "networkx",
    "coverage",
    "pytest",
    "matplotlib",
    "setuptools",
    "pygraphviz",
    "hypothesis"
]
name = "grey"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
